<resources>
    <string name="app_name">Helix Age Converter</string>
    <string name="calculate_your">CALCULATE YOUR</string>
    <string name="age">Helix (Age)</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="select_date">Select Date</string>
    <string name="selected_date">Selected Date</string>
    <string name="age_in_minutes">Age in minutes</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="_0">0</string>
    <string name="age_in_hours">Age in hours</string>
</resources>